--- a/project/index.html
+++ b/project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coin Flip Application</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     
@@ -21,6 +21,6 @@
 </div>
 
 
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
