--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+
+    <div class="flipText">
+        <p>This project demonstrates my ability to build<br>
+           interactive web features using HTML, CSS,<br>
+           JavaScript. The coin flip functionality uses<br>
+           basic JavaScript logic to generate a random <br>
+           result—heads or tails—whenever they clicks<br> 
+           a button. CSS is used to style the interface, <br>
+            ensuring it looks clean and responsive on <br>
+             different devices</p>
+    </div>
     
 <div class="container">
 <div id="coin" class="">
